opam-version: "1.2"
maintainer: "unixjunkie@sdf.org"
authors: ["Francois BERENGER"]
homepage: "https://github.com/UnixJunkie/oranger"
bug-reports: "https://github.com/UnixJunkie/oranger/issues"
dev-repo: "git+https://github.com/UnixJunkie/oranger.git"
license: "LGPL + linking exception"
build: [
  ["sh" "install_ranger.sh"]
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "dolog"
  "minicli" {test}
  "batteries" {test}
  "cpm" {test}
]
